--- a/src/app/landingpage/video-site/favorites/favorites.component.html
+++ b/src/app/landingpage/video-site/favorites/favorites.component.html
@@ -1,13 +1,23 @@
 <section>
-    <div class="body">
-        @if(videoService.favVideos.length > 0){
-            @for (video of videoService.favVideos; track $index) {
-                <app-video-preview
-                    [video]="video"
-                    (videoSelected)="onVideoSelected($event)"
-                ></app-video-preview>
+    <div class="videoBox">
+        <div class="h1Div">
+            @if(videoService.favVideos.length == 0){
+                <h1>You have no favorites yet.</h1>
+            } @else {
+                <h1>Your Favorites</h1>
             }
-        }
+        </div>
+        <div class="videoList">
+            @if(videoService.favVideos.length > 0){
+                @for (video of videoService.favVideos; track $index) {
+                    <app-video-preview
+                        [video]="video"
+                        (videoSelected)="onVideoSelected($event)"
+                    ></app-video-preview>
+                }
+            }
+        </div>
+        
     </div>
     <app-video-display
         *ngIf="selectedVideo"
