--- a/src/app/shared/toast/toast.component.scss
+++ b/src/app/shared/toast/toast.component.scss
@@ -4,52 +4,83 @@
   border-radius: 5px;
   margin-bottom: 15px;
   color: #fff;
-  transition: opacity 0.3s ease-in-out;
+  transition: opacity 0.3s ease-in-out, transform 11.8s ease-in-out;
   position: absolute;
-  top: 73%;
+  top: 50%;
   width: 540px;
   height: 80px;
   border-radius: 20px;
   gap: 16px;
   left: 8px;
-  
-    &.success {
-      background-color: green;
-    }
-  
-    &.error {
-      background-color: #2E3EDF;
-    }
-  
-    &.info {
-      background-color: rgb(30, 30, 37);
-    }
-  }
-  .left-side{
-    background-color: red;
-    width: 20px;
-    height: 80px;
-    /* border-radius: 20px; */
-    border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;
+  opacity: 0; /* Start mit 0 Opazität */
 
+  &.show {
+    animation: slideIn 0.5s ease-in-out forwards; /* Animation anwenden */
   }
-  
-  .toast-icon {
-    margin-right: 10px;
+
+  &.hide {
+    animation: slideOut 0.5s ease-in-out forwards;
   }
-  
-  .toast-message {
-    flex-grow: 1;
+
+  &.success {
+    background-color: green;
   }
-  
-  .toast-close {
-    background: none;
-    border: none;
-    color: inherit;
-    cursor: pointer;
+
+  &.error {
+    background-color: #2e3edf;
   }
-  .close-img{
-    padding-right: 20px;
-    cursor: pointer;
+
+  &.info {
+    background-color: rgb(30, 30, 37);
   }
+}
+
+@keyframes slideIn {
+  from {
+    transform: translateX(-600px);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slideOut {
+  from {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  to {
+    transform: translateX(-600px);
+    opacity: 0;
+  }
+}
+
+.left-side {
+  background-color: red;
+  width: 20px;
+  height: 80px;
+  /* border-radius: 20px; */
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+}
+
+.toast-icon {
+  margin-right: 10px;
+}
+
+.toast-message {
+  flex-grow: 1;
+}
+
+.toast-close {
+  background: none;
+  border: none;
+  color: inherit;
+  cursor: pointer;
+}
+.close-img {
+  padding-right: 20px;
+  cursor: pointer;
+}
