fix validation for email

--- a/src/app/landingpage/login/email-sent/email-send.component.html
+++ b/src/app/landingpage/login/email-sent/email-send.component.html
@@ -17,7 +17,7 @@
                     @if (email == ''){
                         <span><img src="../../../../assets/img/warning.svg" alt="allertImg">Email is required</span>
                     } @else if(!checkEmail()) {
-                        <span><img src="../../../../assets/img/warning.svg" alt="allertImg">Email should have at least 5 characters</span>
+                        <span><img src="../../../../assets/img/warning.svg" alt="allertImg">Please enter a valid email </span>
                     } 
                 </div>
             }
